--- a/contact_me.html
+++ b/contact_me.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body style="padding-left:10px">
     <h1>My contact details</h1>
@@ -17,7 +18,7 @@
       </tr>
       <tr>
         <td>telegram</td>
-        <td><a href="t.me/helloluckyy">ping me</a></td>
+        <td><a href="https://t.me/helloluckyy">ping me</a></td>
         <td></td>
       </tr>
       <tr>
