--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
 
     <title>Resume</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+
   </head>
   <body style="padding:10px" >
     <table cellspacing="10px">
